--- a/index.html
+++ b/index.html
@@ -1,18 +1,7 @@
-<!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8" />
-    <title>Hello React!</title>
-
-    <!-- update with links to latest version of React:
-     https://facebook.github.io/react/downloads.html
-     -->
-    <script src="https://fb.me/react-0.14.3.js"></script>
-    <script src="https://fb.me/react-dom-0.14.3.js"></script>
-  </head>
   <body>
-    <div id="example"></div>
-
-    <script src="build/main.js"></script>
+    <div id="exampleDiv"></div>
+    <!-- load bundle.js at the very bottom -->
+    <script src="bundle.js"></script>
   </body>
 </html>
