Adds shortcuts to package.json

--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
   <body>
     <div id="exampleDiv"></div>
     <!-- load bundle.js at the very bottom -->
-    <script src="bundle.js"></script>
+    <script src="./build/bundle.js"></script>
   </body>
 </html>
