Adds AverageReviewTimeReport component

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <body>
-    <div id="exampleDiv"></div>
+    <div id="app"></div>
     <!-- load bundle.js at the very bottom -->
     <script src="./build/bundle.js"></script>
   </body>
